argocd/tools/easy-wg-mikrotik/easy-wg-mikrotik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easy-wg-mikrotik
  namespace: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: easy-wg-mikrotik
  template:
    metadata:
      labels:
        app: easy-wg-mikrotik
    spec:
      containers:
      - name: easy-wg-mikrotik
        image: rubyon/easy_wg_mikrotik
        ports:
        - containerPort: 3000
