argocd/tools/easy-wg-mikrotik/easy-wg-mikrotik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easy-wg-mikrotik
  namespace: tools
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: easy-wg-mikrotik
